# iac-migration-tool

./: .gitignore  APPROACH.md  README.md  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: migrate.py  pre_process.py
app/core/: config.py  logger.py  logger_config.json
app/genai/: llm_handler.py  output_parser.py  prompts.py
app/model/: iac_migration_base_model.py  migrate_model.py  pre_process_model.py
app/output/: d84fba8e-7fee-42ee-8ffd-726a3393ea73_REPORT.md
app/service/: migrate_services.py  pre_process_service.py
